Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/arrays/DeclarationAnnotation.out
DeclarationAnnotation.java:13:21: compiler.err.annotation.type.not.applicable.to.type: DA
DeclarationAnnotation.java:10:21: compiler.err.annotation.type.not.applicable.to.type: DA
DeclarationAnnotation.java:11:21: compiler.err.annotation.type.not.applicable.to.type: DA
DeclarationAnnotation.java:12:21: compiler.err.annotation.type.not.applicable.to.type: DA
4 errors
